[gd_scene load_steps=11 format=2]

[ext_resource path="res://City.gd" type="Script" id=1]
[ext_resource path="res://assets/city3.png" type="Texture" id=2]
[ext_resource path="res://assets/quarantined.png" type="Texture" id=3]
[ext_resource path="res://assets/testing.png" type="Texture" id=4]
[ext_resource path="res://assets/city.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 5 )

[sub_resource type="Gradient" id=3]

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 100

[sub_resource type="Gradient" id=5]

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 100

[node name="City" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="TextureRect" parent="."]
material = SubResource( 7 )
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuarantinedIcon" type="TextureRect" parent="."]
visible = false
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestingIcon" type="TextureRect" parent="."]
visible = false
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndustryIcon" type="TextureRect" parent="."]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EconomyBar" type="TextureRect" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_top = 50.0
margin_right = 50.0
margin_bottom = 60.0
texture = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VirusBar" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_top = 60.0
margin_right = 50.0
margin_bottom = 70.0
texture = SubResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTag" type="Label" parent="."]
margin_top = -20.0
margin_right = 40.0
margin_bottom = -6.0
text = "City Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EconomyRateLabel" type="Label" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_left = -16.0
margin_top = 42.6703
margin_right = -8.0
margin_bottom = 56.6703
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 1
text = "+"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VirusRateLabel" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 50.6775
margin_top = 50.5141
margin_right = 58.6775
margin_bottom = 64.5141
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 1
text = "+"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Sprite" to="." method="_on_Sprite_gui_input"]
